# call_me_maybe

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
call_me_maybe/src/: models.py
data/input/: function_calling_tests.json  functions_definition.json
data/output/: function_call_results.json  function_calls.json
src/: __main__.py  constrained_decoding.py  generator_llm.py  load_json.py  main.py  models.py  parser.py  tempCodeRunnerFile.py  utils.py  utils_constrained_decoding.py
