[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llm-sdk",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "torch==2.12.0+cpu",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
default = true

[tool.uv.sources]
llm-sdk = { workspace = true }

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.mypy]
ignore_missing_imports = true
exclude = ["llm_sdk"]
disable_error_code = ["misc"]
